# AI-Coding-Observability

./: .gitignore  MEMORY.md  README.md  pyproject.toml
docs/: metrics-framework.md
docs/superpowers/plans/: 2026-03-29-orchestration-pivot.md
docs/superpowers/specs/: 2026-03-29-orchestration-pivot-design.md
reports/: 2026-03-29.html
src/claude_analytics/: __main__.py  aggregator.py  cache.py  classifier.py  codegen.py  efficiency.py  insights.py  llm_classifier.py  main.py  models.py  orchestration.py  orchestration_insights.py  parser.py  privacy.py  quality.py  reporter.py
src/claude_analytics/dashboard/: index.html
tests/: test_aggregator.py  test_aggregator_extra.py  test_cache.py  test_classifier.py  test_classifier_extra.py  test_codegen.py  test_confidence.py  test_e2e.py  test_efficiency.py  test_insights.py  test_llm_classifier.py  test_main.py  test_orchestration.py  test_orchestration_insights.py  test_parser.py  test_parser_extra.py  test_privacy.py  test_quality.py  test_reporter.py
tests/fixtures/: generate_fixtures.py
